[project]
name = "vault-project"
version = "0.1.0"
description = "A personal finance and asset portfolio tracker CLI"
readme = "README.md"
authors = [
    { name = "Jacob Keller", email = "jakekeller321@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "yfinance>=0.2.40",
    "rich>=13.0",
]

[project.scripts]
vault = "Vault.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}